# spotify-etl-aws

./: .gitignore  LICENSE  Makefile  Overview.md  README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
airflow/: Dockerfile  requirements.txt
airflow/dags/: bronze.py  bronze_dag.py  gold_dag.py  manager.py  playlist_model.py  raw.py  raw_dag.py  silver.py  silver_dag.py  test_dag.py
airflow/include/ingestion/: bronze.py  raw.py  silver.py
dags/: bronze.py  bronze_dag.py  data_validation.py  import_json.py  manager.py  model.py  playlist_dag.py  raw_dag.py  silver.py  test.py
data/bronze/: artists.parquet  playlists.parquet
data/raw/: __None_20.json  _album_hip hop_50.json  playlist_37i9dQZEVXbMDoHDwVN2tF_1.json  playlist_37i9dQZEVXbMDoHDwVN2tF_si=e8e1e56d145e4f9b_20.json
data/silver/: albums.parquet  tracks.parquet
dbt/pypi_metrics/: dbt_project.yml
dbt/spotify_etl_aws/: .user.yml  dbt_project.yml
dbt/spotify_etl_aws/macros/: export_playlist_tracks_data.sql
ingestion/bronze/: __init__.py  bronze.py
ingestion/ingestion/bronze/: bronze.py
ingestion/ingestion/raw/: raw.py
ingestion/ingestion/silver/: silver.py
ingestion/manager/: __init__.py  manager.py
ingestion/manager/OAuth2.0/: callbackserver.py
ingestion/raw/: raw.py
ingestion/silver/: silver.py
models/: model.py  playlist_model.py
src/: api_dag.py  aws_manager.py  bronze.py  duckdb_manager.py  raw-2.py  raw.py  test.py
src/data/raw/: Light my fire_track_50.json  Queen_artist_20.json  The Doors_album_50.json  (+3 more)
terraform/: main.tf  s3_bucket.tf  variables.tf
(+37 files in other folders)
